--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>un jueyguito</title>
     <script src="library/phaser.js"></script>
     <script src="library/phaser-plugin-isometric.min.js"></script>
+    <script src="main.js"></script>
   </head>
   
   <body>
