--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
   <head>
     <meta charset="utf-8" />
     <title>un jueyguito</title>
-    <script src="library/phaser.js"></script>
-    <script src="library/phaser-plugin-isometric.min.js"></script>
   </head>
-  
+
   <body>
     <div id="game"></div>
   </body>
+  <script src="library/phaser-2.1.1.min.js"></script>
+  <script src="library/phaser-plugin-isometric.min.js"></script>
+  <script src="main.js"></script>
 </html>
