adding the camara..

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
   <head>
     <meta charset="utf-8" />
     <title>un jueyguito</title>
+    <link href="style.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
-    <div id="game"></div>
+  <div id="game"></div>
   </body>
+
   <script src="library/phaser-2.1.1.min.js"></script>
   <script src="library/phaser-plugin-isometric.min.js"></script>
   <script src="main.js"></script>
