--- a/index.html
+++ b/index.html
@@ -14,4 +14,5 @@
   <script src="library/phaser-2.1.1.min.js"></script>
   <script src="library/phaser-plugin-isometric.min.js"></script>
   <script src="main.js"></script>
+  <script src="game/robot.js"></script>
 </html>
