--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
   <script src="library/phaser-2.1.1.min.js"></script>
   <script src="library/phaser-plugin-isometric.min.js"></script>
-  <script src="main.js"></script>
   <script src="game/robot.js"></script>
+  <script src="game/player.js"></script>
+  <script src="main.js"></script>
 </html>
