--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
   <script src="game/robot.js"></script>
   <script src="game/player.js"></script>
   <script src="game/level1.js"></script>
+  <script src="game/level2.js"></script>
   <script src="main.js"></script>
 </html>
