Adding letters to lvl1 and refactoring a little.. :3

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <script type="text/javascript">
     window.BasicGame = function (game) { };
   </script>
+  <script src="game/letter.js"></script>
+  <script src="game/letterGroup.js"></script>
   <script src="game/robot.js"></script>
   <script src="game/player.js"></script>
   <script src="game/level1.js"></script>
