--- a/index.html
+++ b/index.html
@@ -4,11 +4,35 @@
   <head>
     <meta charset="utf-8" />
     <title>Vengadora's Quest</title>
+    <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
     <link href="style.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
-  <div id="game"></div>
+  <div style="margin: 16px">
+    <div class="row">
+      <div class="col-md-2">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
+      <div class="col-md-8">
+        <center><h2 style="color: #fff">Vengadora's Quest</h2></center>
+        <div style="margin-left: 80px" id="game"></div>
+      </div>
+      <div class="col-md-2">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
+    </div>
+  </div>
   </body>
 
   <script src="library/phaser-2.1.1.min.js"></script>
