Added init screen and menu

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
   <script type="text/javascript">
     window.BasicGame = function (game) { };
   </script>
+  <script src="game/initScreen.js"></script>
   <script src="game/robot.js"></script>
   <script src="game/player.js"></script>
   <script src="game/level1.js"></script>
