Added story without a cool story

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
   </script>
   <script src="game/rankingController.js"></script>
   <script src="game/initScreen.js"></script>
+  <script src="game/story.js"></script>
   <script src="game/rankings.js"></script>
   <script src="game/letter.js"></script>
   <script src="game/letterGroup.js"></script>
