Heart lives added.. <3

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
     window.BasicGame = function (game) { };
   </script>
   <script src="game/initScreen.js"></script>
+  <script src="game/live.js"></script>
+  <script src="game/livesGroup.js"></script>
   <script src="game/letter.js"></script>
   <script src="game/letterGroup.js"></script>
   <script src="game/robot.js"></script>
