--- a/index.html
+++ b/index.html
@@ -55,5 +55,6 @@
   <script src="game/player.js"></script>
   <script src="game/level1.js"></script>
   <script src="game/level2.js"></script>
+  <script src="game/middleLevel1.js"></script>
   <script src="main.js"></script>
 </html>
